Aula 2026_01_30 - Final Commit